<resources>
    <string name="app_name">Sample Payment App</string>
    <!-- Strings used for fragments for navigation -->
    <string name="button_pay_nyc1">Pay with Card Reader</string>
    <string name="button_pay_t2p">Pay with Tap to Pay</string>

    <string name="first_fragment_connect_to_device">Connect to the device first.</string>
    <string name="first_fragment_default_payment">Default payment is €5</string>

    <string name="toast_no_bt_permissions">Check your Bluetooth permissions.</string>
    <string name="toast_t2p_interface_creation_failed">Something went wrong.</string>
    <string name="clear_session">Clear Session</string>
    <string name="diagnosis_device">Diagnosis Device</string>
</resources>